--- a/app/assets/stylesheets/shared/_header.scss
+++ b/app/assets/stylesheets/shared/_header.scss
@@ -1,9 +1,10 @@
 header {
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://source.unsplash.com/1200x200/?cocktail');
-  background-cover: cover;
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7)), url('https://source.unsplash.com/1600x200/?cocktail');
+  background-size: cover;
   padding: 20px;
   line-height: 80px;
   margin-bottom: 40px;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.6);
   >div {
     display: flex;
     justify-content: space-between;
@@ -11,8 +12,8 @@ header {
     height: 100px;
   }
   #logo {
-    font-family: cursive;
-    font-size: 34px;
+    font-family: Marck Script;
+    font-size: 38px;
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -21,10 +22,6 @@ header {
   #logo:hover i {
     transform: rotate(-20deg);
     transition: 1s;
-    text-shadow: 0 0 15px rgba(5, 108, 231, 1);
-  }
-  #logo:hover {
-    text-decoration: underline rgba(5, 108, 231, 1);
   }
 
   .btn {
@@ -32,3 +29,14 @@ header {
     border: 1px solid rgba(255, 255, 255, 0.3)
   }
 }
+@media(max-width: 992px) {
+  header #logo {
+    font-size: 32px;
+  }
+}
+@media(max-width: 576px) {
+  header #logo {
+    font-size: 26px;
+  }
+}
+
